# openwrt-tlink-r4x-debian

./: README.md
.github/workflows/: dist-notes.md  dist.yml
flasher/: Cargo.toml
flasher/src/: main.rs
flasher/src/pages/: final.rs  flash.rs  image.rs  mod.rs
scripts/: cp_image.sh  install_to_sdcard.sh  zstd_to_gz.sh
scripts/live_install/: do_install_debian  do_install_debian_to_emmc  install_debian.sh
system/: system-slim.yaml  system.yaml  system_slim.yaml
system/overlays/config/lib/udev/: hwclock-set
system/overlays/kernel/: boot.scr  rockchip.dtb
system/overlays/lib/modules/6.6.127/: ahci.ko  ahci_dwc.ko  ahci_platform.ko  asix.ko  ath.ko  ath6kl_core.ko  ath6kl_usb.ko  autofs4.ko  ax88796b.ko  brcmfmac-bca.ko  brcmfmac-cyw.ko  brcmfmac-wcc.ko  brcmfmac.ko  brcmutil.ko  can-bcm.ko  can-dev.ko  can-raw.ko  can.ko  cdc-wdm.ko  cdc_eem.ko  cdc_ether.ko  cdc_mbim.ko  cdc_ncm.ko  cfg80211.ko  cmac.ko  compat.ko  cordic.ko  crc-ccitt.ko  crc8.ko  drbg.ko  geniv.ko  gpio-button-hotplug.ko  hmac.ko  huawei_cdc_ncm.ko  ipheth.ko  jitterentropy_rng.ko  libahci.ko  libahci_platform.ko  libata.ko  modules.builtin  (+74 more)
system/overlays/modules/etc/: gen_modules.sh  modules
system/overlays/network.slim/usr/sbin/: thingslink_firstboot.sh
system/overlays/network/etc/hostapd/: wlan0.conf  wlan1.conf
system/overlays/network/usr/sbin/: thingslink_firstboot.sh
system/overlays/symlink/etc/: build_version
system/overlays/symlink/mnt/sympad/: LDog.ex  SLKernal.exa  (+3 more)
system/overlays/utils/sbin/: install_to_emmc  sysinfo  write_psn
system/scripts/: setup-user.sh
(+263 files in other folders)
