[package]
name = "flasher"
version = "0.1.0"
edition = "2024"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT AND Apache-2.0"
description = "Minimal flasher"

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.36", features = ["zstd", "futures-io"] }
bmap-parser = "0.2.1"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
rustix = { version = "1.1.3", features = ["mount", "termios"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-logger = { version = "0.18.0", features = ["tracing-subscriber", "tracing-support"] }
zbus_systemd = { version = "0.25900.0", features = ["systemd1"] }
